2005-03-20  Derek Price  <derek@ximbiot.com>

	* rcs.c (expand_keywords): Avoid buffer overflow.
	(Original patch from Stewart Brodie <stewart@eh.org>.)

	* sanity.sh (rcs5): New tests for the above.

2005-03-17  Derek Price  <derek@ximbiot.com>

	* login.c (password_entry_parseline): Avoid using uninitialized
	variable.
	* rcs.c (RCS_deltas): Avoid buffer overflow.
	(RCS_checkout): Avoid using uninitialized loglen.
	* patch.c (patch_fileproc): Free original pointer, not one that may
	have been incremented.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-17  Derek Price  <derek@ximbiot.com>

	* commit.c (checkaddfile): Avoid dereferencing a NULL pointer in
	response to a rare error.
	* admin.c (admin_fileproc), log.c (log_expand_revlist), mkmodules.c
	(checkout_file), rcs.c (RCS_getdate, RCS_deltas, RCS_findlock_or_tip,
	RCS_tag2rev): Avoid dereferencing NULL pointer.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-17  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_reparsercsfile): Avoid memory leak.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

2005-03-17  Derek Price  <derek@ximbiot.com>

	* log.c (log_expand_revlist): Suppress message and not error handling
	when really_quiet.

2005-03-17  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Put function call after var decls.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory), commit.c (commit_filesdoneproc), log.c
	(log_expand_revlist, log_version), logmsg.c (logfile_write), modules
	(my_module), no_diff.c (No_Difference), parseinfo.c (Parse_Info), rcs.c
	(RCS_deltas, RCS_checkin, RCS_addbranch, do_locks, do_symbols),
	rcscmds.c (RCS_merge), root.c (parse_cvsroot, normalize_cvsroot),
	update.c (merge_file): Verify assumptions via assertions.
	(Thanks to (probably) incorrect reports from Alen Zukich
	<alen.zukich@klocwork.com>.)

2005-03-16  Derek Price  <derek@ximbiot.com>
